# overhead-gameplay

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
Core/: Camera.h  CameraUtils.h  Clock.hpp  Debug.h  Define.h  Event.hpp  Expected.hpp  Logger.hpp  Logger.inl  MathUtils.h
Editor/: CMakeLists.txt
Editor/include/: Editor.h  EditorImGui.h  EditorRaylib3D.h  EditorSerializer.h  Inspector.h  InspectorNodeProperties.h  InspectorNodePropreties.h  NewGizmo.hpp  SerializeObject.h  imguiAssetBrowser.h  rlights.h
Editor/include/AssetLoading/: EditorAssetLoader.h  EditorFBXLoader.h
Editor/src/: Editor.cpp  EditorImGui.cpp  EditorRaylib3D.cpp  EditorSerializer.cpp  InspectorNodeProperties.cpp  InspectorNodePropreties.cpp  SerializeObject.cpp
Editor/src/AssetLoading/: EditorAssetLoader.cpp  EditorFBXLoader.cpp
EditorExe/: CMakeLists (2).txt  CMakeLists.txt
EditorExe/src/: main.cpp  mainEditor.cpp  mainTestRaylib.cpp
Foundry/: CMakeLists.txt
Foundry/include/: Action.h  ActionMap.h  AnimationStructs.h  AudioEngine.h  AudioMixer.h  Foundry.h  GameLoop.h  GeometryFactory.h  IControl.h  ISerializable.h  Logger.hpp  MathUtils.h  Node.h  ProxyRegistration.h  SceneTree.h  SerializeObject.hpp  Server.hpp  Transform2D.h  Transform3D.h
Foundry/include/AssetLoading/: AssetLoader.h  AssetsStructs.h  FBXLoader.h
Foundry/include/Multithreading/: TaskGraph.h
Foundry/include/Nodes/: AllNodes.h  Node2D.h  Node3D.h  NodeAudioEmitter.h  NodeAudioListener.h  NodeCamera.h  NodeCollider.h  NodeMesh.h  NodeMeshAnimated3D.h  NodeRigidBody.h  NodeTypes.h  NodeViewport.h  NodeVisual.h  NodeWindow.h
Foundry/include/Registries/: AutomaticRegister.hpp  AutomaticRegisterISerializable.hpp  AutomaticRegisterProxy.hpp
Foundry/include/Scripting/: Binder.h  RegisterProxies.h  ScriptInstance.h  ScriptingEngine.h  ScriptingEngineImplementation.h  UserData.h
Foundry/include/Scripting/Lua/: LuaBinder.inl  LuaBindings.h  LuaScriptInstance.hpp
Foundry/include/Scripting/Proxies/: ActionMapProxy.h  ActionMapProxy.hpp  AudioMixerProxy.inl  AudioServerProxy.h  CollidersProxy.inl  EventManagerProxy.h  EventManagerProxy.hpp  EventProxy.h  MathsProxy.h  MathsProxy.hpp  Node2DProxy.inl  Node3DProxy.inl  NodeAudioEmitterProxy.h  NodeAudioEmitterProxy.inl  NodeAudioListenerProxy.h  NodeAudioListenerProxy.inl  NodeCameraProxy.inl  NodeColliderProxy.inl  NodeMeshProxy.inl  NodeProxy.inl  NodeRigidBodyProxy.inl  NodeSpeColliderProxy.inl  NodeWindowProxy.inl  PhysicsProxy.hpp  SceneTreeProxy.h  Vec3Proxy.hpp
Foundry/include/Serialization/: ISerializable.h  ISerializableEncaps.h  SerializeObject.hpp
Foundry/include/Servers/: AnimationServer.h  AudioServer.h  EngineServer.h  GraphicServer.h  LuaServer.h  PhysicsServer.h
Foundry/src/: Action.cpp  ActionMap.cpp  AudioEngine.cpp  AudioMixer.cpp  Foundry.cpp  GameLoop.cpp  GeometryFactory.cpp  IControl.cpp  ISerializable.cpp  MixerAudio.cpp  Node.cpp  SceneTree.cpp  SerializeObject.cpp  Transform2D.cpp  Transform3D.cpp
Foundry/src/AssetLoading/: AssetLoader.cpp  FBXLoader.cpp
Foundry/src/Multithreading/: TaskGraph.cpp
Foundry/src/Nodes/: Node2D.cpp  Node3D.cpp  NodeAudioEmitter.cpp  NodeAudioListener.cpp  NodeCamera.cpp  NodeCollider.cpp  NodeMesh.cpp  NodeMeshAnimated3D.cpp  NodeRigidBody.cpp  NodeViewport.cpp  NodeVisual.cpp  NodeWindow.cpp
Foundry/src/Scripting/Lua/: LuaScriptInstance.cpp  LuaScriptingEngine.cpp
Foundry/src/Scripting/Proxies/: ActionMapProxy.cpp  AudioServerProxy.cpp  EventManagerProxy.cpp  MathsProxy.cpp  Node2DProxy.cpp  Node3DProxy.cpp  NodeAudioEmitterProxy.cpp  NodeAudioListenerProxy.cpp  NodeCameraProxy.cpp  NodeColliderProxy.cpp  NodeMeshProxy.cpp  NodeProxy.cpp  NodeRigidBodyProxy.cpp  NodeSpeCollidersProxy.cpp  PhysicsProxy.cpp  SceneTreeProxy.cpp
Foundry/src/Serialization/: ISerializableEncaps.cpp  SerializeObject.cpp
Foundry/src/Servers/: AnimationServer.cpp  AudioServer.cpp  EngineServer.cpp  GraphicServer.cpp  LuaServer.cpp  PhysicsServer.cpp
Game/: CMakeLists.txt
Game/src/: demoRender.cpp  main.cpp  mainActionMap.cpp  mainAssetLoading.cpp  mainAudio.cpp  mainEditor.cpp  mainGameLoop.cpp  mainGeo.cpp  mainJsonSerialization.cpp  mainSceneLoad.cpp  mainTestRaylib.cpp  mainTransform2D.cpp  mainTransform3D.cpp  render.cpp  windowtest.cpp
Ore/: CMakeLists.txt
Ore/include/: Buffer.h  Buffer.inl  Camera.h  EventManager.h  Geometry.h  Mesh.h  ObjectFactory.h  Ore.h  Program.h  RenderGraph.h  Shader.h  Texture.h  TextureObject.h  VertexArrayObject.h  Viewport.h  Window.h
Ore/include/Passes/: AnimatedPass.h  GeometryPass.h  LightPass.h  Pass.h  UIPass.h
Ore/include/UIElements/: FTFontFace.h  FontFace.h  Image.h  Text.h  UIElement.h
Ore/src/: Camera.cpp  EventManager.cpp  FTFontFace.cpp  Geometry.cpp  Mesh.cpp  Ore.cpp  Program.cpp  RenderGraph.cpp  Shader.cpp  Texture.cpp  TextureObject.cpp  VertexArrayObject.cpp  Viewport.cpp  Window.cpp
Ore/src/Passes/: AnimatedPass.cpp  GeometryPass.cpp  LightPass.cpp  Pass.cpp  UIPass.cpp
Ore/src/UIElements/: Image.cpp  Text.cpp
RHI/: CMakeLists.txt
RHI/include/: Color.h  IBuffer.h  ICamera.h  IEventManager.h  IGeometry.h  IMesh.h  IObject.h  IPass.h  IProgram.h  IRenderGraph.h  IShader.h  ITexture.h  ITextureObject.h  IVertexArrayObject.h  IViewport.h  IWindow.h  rhi.h
res/: AudioTest.lua  foundry.d.lua  test.lua
res/.foundry/: Node3D.d.lua  NodeCollider.d.lua  NodeRigidBody.d.lua  NodeSpeCollider.d.lua  Physics.d.lua  audio.d.lua  hook.lua  timer.lua
res/Assets/: Objets_Resto_UV.fbx  piece_puzzle_etoile.fbx
res/fbx/: Bob_Version_Brute.fbx  Comptoire_textures.fbx  Mesh_StaffRoom_puzzle.fbx  Staff_Room_Fondations.fbx  Staff_Room_Movable_Meshs.fbx  Staff_Room_Niveau_test.fbx  Test_Anim.fbx  Test_staff_room.fbx
res/scenes/: AudioScene.sc.json  Bib.nd.json  BobScene.sc.json  Bob_Version_Brute.nd.json  Bob_moins_Y.nd.json  ElouanScene.nd.json  ElouanScene.sc.json  (+15 more)
testLib/: CMakeLists.txt
testLib/include/: testLib.h
vcpkg-ports/: enet.cmake  portfile.cmake  raygizmo.cmake  react3d.cmake  vcpkg.json
(+100 files in other folders)
